<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/face"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-220dp"
        android:layout_marginStart="98dp"
        app:srcCompat="@drawable/face" />

    <ImageView
        android:id="@+id/gmail"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-220dp"
        app:srcCompat="@drawable/gmail" />

    <ImageView
        android:id="@+id/vk"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-220dp"
        android:layout_marginStart="-98dp"
        app:srcCompat="@drawable/vk" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="200dp"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:backgroundTint="#42aaff"
        android:text="@string/login" />

    <EditText
        android:id="@+id/mail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/mail"
        android:inputType="textPersonName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_mail_error"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="22dp"
        app:errorTextColor="@color/colorRed"
        />

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginBottom="-20dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/pass" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/log_pass_error"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="-52dp"
        app:errorTextColor="@color/colorRed"/>

    <Button
    android:id="@+id/reg2"
    android:layout_width="250dp"
    android:layout_height="50dp"
    android:layout_gravity="center"
    android:layout_marginTop="150dp"
    android:text="@string/reg"
        android:backgroundTint="#42aaff"/>




</FrameLayout>