<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".UserProfile">

    <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:background="@color/snow"
        android:elevation="4dp"
        app:menu="@menu/bottom_navigation_menu"
        />

    <ImageView
        android:id="@+id/icon_user"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/icon_user" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="265dp"
        android:text="@string/user_name"
        android:textColor="#0B0808"
        android:textDirection="inherit"
        android:textSize="24sp"
        android:typeface="monospace" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="30dp"
        android:text="Почта"
        android:textColor="#0B0808"
        android:textDirection="inherit"
        android:textSize="26sp"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/user_mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="12"
        android:textSize="20sp"
        android:inputType="textPersonName"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="27dp"
        android:text="alla_sosedova@tvoi.sosed" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="30dp"
        android:text="Подтверждение аккаунта"
        android:textColor="#0B0808"
        android:textDirection="inherit"
        android:textSize="22sp"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/passport"
        android:layout_width="40dp"
        android:layout_height="60dp"
        app:srcCompat="@drawable/passport"
        android:layout_alignStart="@+id/user_mail"
        android:layout_marginTop="460dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="478dp"
        android:layout_marginStart="80dp"
        android:text="@string/passport_confirm"
        android:textColor="#0B0808"
        android:textDirection="inherit"
        android:textSize="20sp"
        android:typeface="monospace" />

    <ImageView
        android:id="@+id/card"
        android:layout_width="50dp"
        android:layout_height="60dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="510dp"
        app:srcCompat="@drawable/card" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="525dp"
        android:layout_marginStart="80dp"
        android:text="@string/card_confirm"
        android:textColor="#0B0808"
        android:textDirection="inherit"
        android:textSize="20sp"
        android:typeface="monospace" />
    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginTop="590dp"
        android:layout_marginStart="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/phone" />


</RelativeLayout>